# browser-control-rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  github-issue-hybrid-browser.md  pain-points.md  test-coordinate-click.sh  visual-automation.md
src/: browser.rs  console.rs  main.rs
