[package]
name = "browser-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
chromiumoxide = "0.5.7"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
colored = "2.1"
chrono = "0.4"
futures-util = "0.3"
rustyline = "14.0"
serde_json = "1.0"
